Created some HTML and added some stuff

--- a/Class/Index.html
+++ b/Class/Index.html
@@ -5,9 +5,26 @@
     <title>Basic HTML</title>
   </head>
   <body>
-      <section>
-        <h1>Title</h1>
-        <h2>Subtitle</h2>
+
+        <header>
+            <nav>
+                <ul>
+                  <li>    <a href="https://www.apple.com/">Apple</a>     </li>
+                  <li>    <a href="https://m.canelink.miami.edu/">  CaneLink</a>     </li>
+                  <li>   <a href="https://github.com/exr743/Test-1">GitHub</a>    </li>
+                </ul>
+            </nav>
+        </header>
+
+
+
+
+    <section>
+
+        <aside>
+
+
+
         <ul>
           <li>Item 1</li>
           <li>Item 21</li>
@@ -18,14 +35,45 @@
           <li>Item 2</li>
           <li>Item 3</li>
         </ol>
+        </aside>
 
-          <p>Forest Foundation fosters the next generation of public service leaders by investing in college students through a comprehensive paid summer internship experience at a non-profit organization. Selected candidates are paired with non-profit agencies in Greater Boston whose missions align with the intern’s passion, skill sets, and academic path. Apply direct. <strong>Deadline to apply is February 15.</strong>
+      <article>
+
+
+
+        <h1>Title</h1>
+        <h2>Subtitle</h2>
+
+          <p> <em>Forest Foundation</em> fosters the next generation of <b>public service leaders</b> by investing in college students through a comprehensive paid summer internship experience at a non-profit organization. Selected candidates are paired with non-profit agencies in Greater Boston whose missions align with the intern’s passion, skill sets, and academic path. Apply direct. <strong>Deadline to apply is February 15.</strong>
 
 </p>
 
 <img src="img/dope.png" alt= "Dope" width="350px" >
-
+    </article>
       </section>
+
+      <section>
+        <address>
+          <ul>
+            <li>Name: Ethan Robbins</li>
+            <li>Phone Number: 786-405-6950</li>
+            <li>Email: dhfg@gmail.com</li>
+          </ul>
+
+        </address>
+      </section>
+
+<table>
+  <tr>
+    <th>Dope pics</th>
+    <th>Not Dope Pics</th>
+
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>8</td>
+  </tr>
+</table>
 
   </body>
 </html>
