--- a/Class/Index.html
+++ b/Class/Index.html
@@ -65,11 +65,13 @@
 
 <table>
   <tr>
+    <!-- THESE ARE TABLE HEADERS -->
     <th>Dope pics</th>
     <th>Not Dope Pics</th>
 
   </tr>
   <tr>
+    <!-- These are Table Cells -->
     <td>1</td>
     <td>8</td>
   </tr>
