First CSS Commit

--- a/HomeWork/Resume.html
+++ b/HomeWork/Resume.html
@@ -2,14 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="ResumeStyle.css/ResumeCSS.css">
+
     <title>Ethan Robbins Resume</title>
   </head>
+  <ul class="horizontaLine">
+    <header>
+      <nav class="navigation" >
+        <ul class="horizontaLine">
+          <li>  <a href="https://www.indeed.com/hire/sem-haj-dual?aceid=&gclid=Cj0KCQiAyp7yBRCwARIsABfQsnTmPSc6YNWdXijAju-wFt3DpdjJKGv-hMMgeyeTc2b_I0fJiOwq_9MaAl2rEALw_wcB">Indeed</a>  </li>
+          <li>  <a href=https://www.linkedin.com/>  LinkedIn  </a>   </li>
+          <li> <a href="https://facebook.com">Facebook</a> </li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="Head">
+
   <body>
     <h1><b><u>Ethan Robbins Resume</u></b></h1>
 
-<img src="img2.html/PIC1.jpg" alt= "My Picture" width="250px" >
+<img id="dope" src="img2.html/PIC1.jpg" alt= "My Picture" width="250px" >
 
+</div>
+
+<div class="container">
 <section>
+
   <h3>Introduction</h3>
   <p>Graduated Palmetto Senior High school, in Miami, Kum Laude, with a 4.3 GPA. Im now a freshman, at UM, studying Music Buisness. I strive to be perfect at every road block thats put in my way. With a vast knowledge in many different areas. I would be a <strong>perfect</strong> fit for any position in your company. </p>
 </section>
@@ -29,6 +48,7 @@
 
       </aside>
     </section>
+      </div>
 
     <section>
       <aside>
@@ -79,16 +99,18 @@
 <section>
   <aside>
 
+<div class="container">
     <h3>Contact information</h3>
     <address>
     <ul>
-      <li><b>Email:</b>exr743@miami.edu</li>
+      <li><b><Email:</b>exr743@miami.edu</li>
       <li><b>Cell</b>:786-376-5001</li>
       <li><b>Website:</b> e-productions.com</li>
     </ul>
   </address>
   </aside>
 </section>
+</div>
 
   </body>
 </html>
