--- a/Class/Index.html
+++ b/Class/Index.html
@@ -1,81 +1,107 @@
 <!DOCTYPE html>
+<!--This is a HTML 5-->
 <html lang="en" dir="ltr">
+
+    <!-- This is the head of my website -->
   <head>
     <meta charset="utf-8">
     <title>Basic HTML</title>
+    <!-- this is the meta data -->
+    <meta name="author" content="Ethan Robbins">
+    <meta name="description" content="Basic HTML example">
+    <meta name="keywords" content="HTML, JS, CSS, Basic example">
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="css/mobile.css">
+    <meta name="viewport" content="initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
+
   </head>
+
+
+  <!-- This is the body of my website -->
   <body>
-
-        <header>
-            <nav>
-                <ul>
-                  <li>    <a href="https://www.apple.com/">Apple</a>     </li>
-                  <li>    <a href="https://m.canelink.miami.edu/">  CaneLink</a>     </li>
-                  <li>   <a href="https://github.com/exr743/Test-1">GitHub</a>    </li>
-                </ul>
-            </nav>
-        </header>
-
-
+      <!-- This is my Header -->
+      <header>
+        <nav class="navigation" >
+          <ul class="horizontaLine">
+            <li>  <a href="https://www.apple.com">Apple</a>  </li>
+            <li>  <a href="https://www.linkedin.com/">  Linked In  </a>   </li>
+            <li> <a href="https://facebook.com">Facebook</a> </li>
+          </ul>
+        </nav>
+      </header>
 
 
-    <section>
-
-        <aside>
-
-
-
+    <!-- This is my sidebar -->
+      <aside class="sidebar">
+        <h3>SideBar</h3>
         <ul>
-          <li>Item 1</li>
-          <li>Item 21</li>
-          <li>Item 31</li>
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
         </ul>
         <ol>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
         </ol>
-        </aside>
+      </aside>
 
-      <article>
-
-
-
-        <h1>Title</h1>
-        <h2>Subtitle</h2>
-
-          <p> <em>Forest Foundation</em> fosters the next generation of <b>public service leaders</b> by investing in college students through a comprehensive paid summer internship experience at a non-profit organization. Selected candidates are paired with non-profit agencies in Greater Boston whose missions align with the intern’s passion, skill sets, and academic path. Apply direct. <strong>Deadline to apply is February 15.</strong>
-
-</p>
-
-<img src="img/dope.png" alt= "Dope" width="350px" >
-    </article>
-      </section>
+      <!-- div is a box used to put our elements and give it style using css -->
+      <!-- A class can be used over and over again in one html document -->
+      <div class="container">
+        <section>
+          <h1>Title</h1>
+          <!-- We use the article tag for articles magazines, posts, etc. -->
+          <article class="article">
+            <h2>Subtitle</h2>
+            <p>
+              <!-- This is for best practices -->
+              <strong>"Lorem ipsum dolor sit amet,</strong>
+              <em>consectetur adipiscing elit, sed do eiusmod</em>
+              <!-- Have the same effect as the one above -->
+              <b>incididunt ut labore et dolore magna aliqua.</b>
+              <i>incididunt ut labore et dolore magna aliqua.</i>
+                Ut enim ad minim veniam,
+               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+               nulla pariatur.
+            </p>
+          <img id="dog" src="img/dope.png" alt="English Bulldog" width="400">
+          </article>
+        </section>
+      </div>
 
       <section>
+        <h1>Contact Information</h1>
         <address>
           <ul>
             <li>Name: Ethan Robbins</li>
-            <li>Phone Number: 786-405-6950</li>
-            <li>Email: dhfg@gmail.com</li>
+            <li>Phone number: 305-804-4576</li>
+            <li>email: bla@gmail.com</li>
           </ul>
-
         </address>
       </section>
 
-<table>
-  <tr>
-    <!-- THESE ARE TABLE HEADERS -->
-    <th>Dope pics</th>
-    <th>Not Dope Pics</th>
+      <table>
+        <tr>
+          <!-- this are table headers -->
+          <th>Human Years</th>
+          <th>Dog Years</th>
+        </tr>
+        <tr>
+          <!-- this are table cells -->
+          <td>1</td>
+          <td>7</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>14</td>
+        </tr>
+      </table>
 
-  </tr>
-  <tr>
-    <!-- These are Table Cells -->
-    <td>1</td>
-    <td>8</td>
-  </tr>
-</table>
+
 
   </body>
+
 </html>
