--- a/Class/Index.html
+++ b/Class/Index.html
@@ -24,7 +24,7 @@
       <header>
         <nav class="navigation" >
           <ul class="horizontaLine">
-            <li>  <a href="https://www.apple.com">Apple</a>  </li>
+            <li>  <a href="class6-1/transitions.html">Class 6-1</a>  </li>
             <li>  <a href="https://www.linkedin.com/">  Linked In  </a>   </li>
             <li> <a href="https://facebook.com">Facebook</a> </li>
           </ul>
