--- a/Class/Index.html
+++ b/Class/Index.html
@@ -25,8 +25,8 @@
         <nav class="navigation" >
           <ul class="horizontaLine">
             <li>  <a href="class6-1/transitions.html">Class 6-1</a>  </li>
-            <li>  <a href="https://www.linkedin.com/">  Linked In  </a>   </li>
-            <li> <a href="https://facebook.com">Facebook</a> </li>
+            <li>  <a href="Class6-2/grid.html"> Grid </a>   </li>
+            <li> <a href="Class7-1/responsiveGrid.html">Responsive Grid</a> </li>
           </ul>
         </nav>
       </header>
