--- a/Class/Class7-1/responsiveGrid.html
+++ b/Class/Class7-1/responsiveGrid.html
@@ -42,8 +42,7 @@
       <div class="gridLayout">
             <!-- The header usually remains the same through all our webpages -->
             <header>
-              Header
-            </header>
+                        </header>
             <!-- Here is our navigation -->
             <nav>
               Navigation
@@ -74,8 +73,8 @@
     <!-- Use the smallGrid to create a simple grid inside the mainGrid-->
 
 
-  <div>
-      <header class="gridMain">
+  <div class="gridMain">
+      <header>
         header
       </header>
 
@@ -84,7 +83,7 @@
       </nav>
 
       <main>
-        <div class="basicGrid">
+        <div class="smallGrid">
           <div>First Column</div>
           <div>Second Column</div>
           <div>Third Column</div>
