--- a/Class/Index.html
+++ b/Class/Index.html
@@ -27,6 +27,8 @@
             <li>  <a href="class6-1/transitions.html">Class 6-1</a>  </li>
             <li>  <a href="Class6-2/grid.html"> Grid </a>   </li>
             <li> <a href="Class7-1/responsiveGrid.html">Responsive Grid</a> </li>
+            <li> <a href="Class8-1/introjs.html">Java Script</a> </li>
+
           </ul>
         </nav>
       </header>
