--- a/Class/Index.html
+++ b/Class/Index.html
@@ -28,6 +28,8 @@
             <li>  <a href="Class6-2/grid.html"> Grid </a>   </li>
             <li> <a href="Class7-1/responsiveGrid.html">Responsive Grid</a> </li>
             <li> <a href="Class8-1/introjs.html">Java Script</a> </li>
+            <li> <a href="Class10/jQuery3.html">Class 10</a> </li>
+              <li> <a href="Class9-2/jQuery2.html">Class 10</a> </li>
 
           </ul>
         </nav>
