A Final Final commit

--- a/HomeWork/JquereyPartA/PartA.html
+++ b/HomeWork/JquereyPartA/PartA.html
@@ -7,38 +7,58 @@
     <meta name="keywords" content="Recipe, Choclate Chip Cookie, How to?">
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="Jstyle.css/Style.css">
-    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="REsitestyle.css/mobile.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="Java.js/style.js"></script>
   </head>
 
   <body>
         <div class="gridLayout">
           <header>
+            <div id="Debug" class="gridBug">
+
             <nav id="cssmenu">
               <ul>
-                <li>  <a id="music" href="Music.html">Show</a>  </li>
-                <li>  <a href="Productions.html"> Hide </a>   </li>
-                <li> <a href="Concerts.html">Toggle</a> </li>
-                <li> <a href="Concerts.html">HTML</a> </li>
-                <li> <a href="Concerts.html">css</a> </li>
+                <li> <a id="_show3" href="#Debug">Show</a> </li>
+                <li> <a id="_hide3" href="#Debug">Hide</a> </li>
+                <li> <a id="_toggle3" href="#Debug">Toggle</a> </li>
+                <li> <a id="_html3" href="#Debug">HTML</a> </li>
+                <li> <a id="_css3" href="#Debug">CSS</a> </li>
               </ul>
             </nav>
-            <h1>Chocklate Chip Cookies</h1>
+            </div>
+
+
+
+          <div class="container2">
+
+
+            <h1>Chocolate Chip Cookies</h1>
             <div>
               <img id="cookie" src="img3.html/Cookie.jpeg" alt="Choclate Chip Cookie" width="200">
-              <p>This is the best chocolate chip cookie recipe ever! No funny ingredients, no chilling time, etc. Just a simple, straightforward, amazingly delicious, doughy yet still fully cooked, chocolate chip cookie that turns out perfectly every single time! </p>
+              <p class="Wstyle">This is the best chocolate chip cookie recipe ever! No funny ingredients, no chilling time, etc. Just a simple, straightforward, amazingly delicious, doughy yet still fully cooked, chocolate chip cookie that turns out perfectly every single time! </p>
             </div>
+          </div>
 
           </header>
           <main>
-              <div class="container2">
-              <h3>Summary</h3>
-              <ul>
+            <img align="Right" id="Egg" src="img3.html/Butter.jpeg" alt="Butter" width="200">
+              <div class="containerA">
+              <h3><u>Summary</u></h3>
+
+              <ul id="List">
                 <li>Prep:20 min</li>
                 <li>Cook: 10 min</li>
                 <li>Servings: 24</li>
               </ul>
+
+              </div>
+
+              <img align="Right" id="Egg" src="img3.html/2._hen_egg.jpg" alt="2 Eggs" width="200">
+
+                <div class="containerB">
+
               <ul>
-              <h3>What you need?</h3>
+              <h3><u>What you need?</u></h3>
                 <li>1 Cup of butter</li>
                 <li>1 cup of White Sugar</li>
                 <li>1 cup packed brown sugar</li>
@@ -48,7 +68,12 @@
                 <li>3 cups all-purpose flour</li>
                 <li>2 cups of semisweet choclate chips</li>
               </ul>
-            <h2>Steps</h2>
+              </div>
+              <img align="Right" id="Egg" src="img3.html/choc.jpg" alt="Choclate Chips" width="200">
+              <div class="containerC">
+
+
+            <h2><u>Steps</u></h2>
             <ol>
               <li>Preheat oven to 350 degrees F</li>
               <li>Mix together butter, white sugar, and brown sugar until smooth.</li>
@@ -60,26 +85,12 @@
 
             </ol>
             </div>
+            <img align="Left" id="Egg" src="img3.html/bake.jpg" alt="Baking Soda" width="200">
+            <img align="Right" id="Egg" src="img3.html/bsugar.jpg" alt="Brown Sugar" width="200">
+          </div>
           </main>
-          <footer>
-<address>
-
-            <section>
-                <div class="container3">
-
-              <h2>Contact the chef!</h2>
-              <address>
-
-                  <p>Name: Ethan Robbins</p>
-                  <p>Phone number: 305-804-4576</p>
-                  <p>email: Newchef@gmail.com</p>
 
 
-              </address>
-              </div>
-            </section>
-              </div>
-          </footer>
-        </div>
+
   </body>
 </html>
