Second draft of Final Project

--- a/HomeWork/Final/Booking.html
+++ b/HomeWork/Final/Booking.html
@@ -1,14 +1,27 @@
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165599064-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165599064-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="author" content="Ethan Robbins">
     <meta name="description" content="Music Productions">
     <meta name="keywords" content="Music, Artist, Productions, example">
+    <title>E-Productions Booking</title>
     <meta name="viewport" content="initial-scale=1">
+    <link rel="stylesheet" href="FinalCSS/StyleBooking.css">
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="FinalCSS/StyleBookingMobile.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="Jstyle/Js2.js"></script>
-    <link rel="stylesheet" href="FinalCSS/StyleBooking.css">
+
   </head>
 
 
@@ -72,3 +85,5 @@
 
 
   </main>
+  </body>
+  </html>
