--- a/HomeWork/Final/Index.html
+++ b/HomeWork/Final/Index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165599064-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165599064-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="author" content="Ethan Robbins">
     <meta name="description" content="Music Productions">
     <meta name="keywords" content="Music, Artist, Productions, example">
+    <title>E-Productions Home</title>
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="FinalCSS/Style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="FinalCSS/StyleMobile.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>>
+    <script src="js/jquery.lettering-0.6.1.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="Jstyle/JS.js"></script>
-    <link rel="stylesheet" href="FinalCSS/jquery.pagepiling.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.6/jquery.pagepiling.min.js"></script>
   </head>
 
   <body>
@@ -21,7 +31,7 @@
           <header>
             <nav id="cssmenu">
               <ul>
-                <li>  <a href="Index.html">Home</a>  </li>
+                <li>  <a href="Welcome.html">Home</a>  </li>
                 <li>  <a href="Vibe.html"> Vibe </a>   </li>
                 <li>  <a href="Service.html">Service</a>  </li>
                 <li>  <a href="Booking.html"> Booking</a>   </li>
@@ -40,14 +50,13 @@
 
           <main>
             <div>
-              <img id="SB" src="Img/SB.jpg" align="right" alt="SoundBoard" width="500">
+              <img id="SB" src="Img/SB.jpg" align="right" alt="SoundBoard" >
           </div>
           <br>
             <div class="ContainerA">
 
 
             <h1 align="right">Welcome To E-Productions</h1>
-            <h4 align="right">Lets Make a hit!</h4>
             <h6>As a Recording Engineer since 2012, I’ve been helping clients of all kinds lay down a crystal clear sound. Whether I’m working on a video or a new album, I’m a hands-on engineer devoted to quality. With years of experience behind me, I’m capable of meeting a wide range of demanding client requests. Learn more about my recent work and the gear you’ll find at my studio, and get in touch with any questions</h6>
             </div>
 
@@ -56,3 +65,8 @@
 
 
         </div>
+        </div>
+
+
+</body>
+</html>
