--- a/HomeWork/Final/Vibe.html
+++ b/HomeWork/Final/Vibe.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165599064-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165599064-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="author" content="Ethan Robbins">
     <meta name="description" content="Music Productions">
     <meta name="keywords" content="Music, Artist, Productions, example">
+    <title>E-Productions Vibe</title>
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="FinalCSS/Stylevibe.css">
-    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="REsitestyle.css/mobile.css">
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="FinalCSS/StyleVibeMobile.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="Jstyle/JS.js"></script>
   </head>
@@ -37,3 +48,9 @@
       <p>When mind and music come together, a masterful project like Roman Fairytale is the end result. Digging deep into their sound engineering talents, Ethan has created a layered masterpiece of crisp sounds and tasteful mixing. E-Productions hopes you enjoy the final product, so please feel free to listen, share, and send them your comments.</p>
 
       </main>
+
+      </div>
+
+
+</body>
+</html>
