--- a/HomeWork/Final/contact.html
+++ b/HomeWork/Final/contact.html
@@ -1,12 +1,27 @@
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165599064-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165599064-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="author" content="Ethan Robbins">
     <meta name="description" content="Music Productions">
     <meta name="keywords" content="Music, Artist, Productions, example">
+    <title>E-Productions Contact</title>
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="FinalCSS/StyleContact.css">
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="FinalCSS/SCMOBILE.css">
   </head>
+  <body>
+
+
 
 
   <div class="gridLayout">
@@ -29,7 +44,7 @@
         </div>
       </header>
 
-      <body>
+      <main>
         <div class="ContainerD">
           <h2 class="Contact">Contact</h2>
             <p class="p4">Sound engineering isn’t the easiest subject to master, so get in touch with any questions. Interested in scheduling a meeting in order to discuss an upcoming project? Whatever you need, just fill out the form below, and I’ll be in touch as soon as I can.</p>
@@ -39,4 +54,10 @@
 
               </address>
         </div>
-      </body>
+      </main>
+      </div>
+
+
+
+</body>
+</html>
