--- a/HomeWork/Final/Service.html
+++ b/HomeWork/Final/Service.html
@@ -1,11 +1,26 @@
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165599064-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165599064-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="author" content="Ethan Robbins">
     <meta name="description" content="Music Productions">
     <meta name="keywords" content="Music, Artist, Productions, example">
+    <title>E-Productions Service</title>
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="FinalCSS/StyleService.css">
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="FinalCSS/StyleServiceMobile.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="Jstyle/Js3.js"></script>
   </head>
 
 
@@ -21,10 +36,12 @@
           </ul>
         </nav>
       <a class="link link--kukuri" href="#" data-letters="Explore My">Explore My Services</a>
-      <p class="Question" >What can I do for you? </p>
+      <footer class="Question">
+           <p>What Can I Do For You?</p>
+      </footer>
       </header>
 
-    <body>
+    <main>
       <div class="row">
 
         <div class="column">
@@ -46,8 +63,12 @@
           <p class="p1">Create and capture your unique sound with an experienced Recording Engineer and the latest technologies at the studio. You’ll have your pick of equipment — including both analog and digital options. Get in touch today to reserve an initial consultation! A world of sound is at your fingertips. </p>
         </div>
       </div>
-    </body>
+    </main>
 
 
 
   </div>
+
+
+</body>
+</html>
