Final Draft / Commit

--- a/HomeWork/Final/Index.html
+++ b/HomeWork/Final/Index.html
@@ -31,7 +31,7 @@
           <header>
             <nav id="cssmenu">
               <ul>
-                <li>  <a href="Welcome.html">Home</a>  </li>
+                <li>  <a href="Welcome.html">Welcome Page</a>  </li>
                 <li>  <a href="Vibe.html"> Vibe </a>   </li>
                 <li>  <a href="Service.html">Service</a>  </li>
                 <li>  <a href="Booking.html"> Booking</a>   </li>
