--- a/HomeWork/Final/contact.html
+++ b/HomeWork/Final/contact.html
@@ -47,7 +47,7 @@
       <main>
         <div class="ContainerD">
           <h2 class="Contact">Contact</h2>
-            <p class="p4">Sound engineering isn’t the easiest subject to master, so get in touch with any questions. Interested in scheduling a meeting in order to discuss an upcoming project? Whatever you need, just fill out the form below, and I’ll be in touch as soon as I can.</p>
+            <p class="p4">Sound engineering isn’t the easiest subject to master, so get in touch with any questions. Interested in scheduling a meeting in order to discuss an upcoming project? Whatever you need, just give us an email, and I’ll be in touch as soon as I can.</p>
               <address>
                 <p><b>Email: e.robbins200@gmail.com</b></p>
                 <p><b>Phone: (786)-376-5001</b></p>
